--- a/lw2/replace/replace.vcxproj.filters
+++ b/lw2/replace/replace.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FindAndReplace_utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
