--- a/lw3/Car/Car.vcxproj.filters
+++ b/lw3/Car/Car.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Car.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="car_utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Car.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="car_utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
