--- a/lw3/Car/Car.vcxproj.filters
+++ b/lw3/Car/Car.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="Car.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="car_utils.h">
+    <ClInclude Include="CarMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -38,7 +38,7 @@
     <ClCompile Include="Car.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="car_utils.cpp">
+    <ClCompile Include="CarMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
