--- a/lw2/replace_tests/replace_tests.vcxproj.filters
+++ b/lw2/replace_tests/replace_tests.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="replace_tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
