The code was brushed

--- a/lw7/findMaxEx/findMaxEx.vcxproj
+++ b/lw7/findMaxEx/findMaxEx.vcxproj
@@ -143,7 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="findMaxEx_utils.hpp" />
+    <ClInclude Include="findMaxEx_utils.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
