--- a/lw2/replace_tests/replace_tests.vcxproj
+++ b/lw2/replace_tests/replace_tests.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\replace\replace_utils.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="replace_tests.cpp" />
     <ClCompile Include="stdafx.cpp">
