--- a/lw2/replace_tests/replace_tests.vcxproj.filters
+++ b/lw2/replace_tests/replace_tests.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\replace\replace_utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
