--- a/lw2/vector_tests/vector_tests.vcxproj.filters
+++ b/lw2/vector_tests/vector_tests.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClCompile Include="vector_tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vector\vector_utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
