--- a/lw7/MyList_tests/MyList_tests.vcxproj.filters
+++ b/lw7/MyList_tests/MyList_tests.vcxproj.filters
@@ -21,15 +21,15 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MyList.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MyList_tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
